[Feature][Connector-V2][Lance]fix LanceIT.java and add TypeWriter with different ArrowType